--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 
 on:
   push:
@@ -19,8 +19,10 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: 🔧 Run just build
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y just
-          just build
+      - name: ⚙️ Set up just
+        uses: extractions/setup-just@v3
+        with:
+          just-version: '1.40.0'
+
+      - name: 🔧 Run build pipeline
+        run: just build
