--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -11,6 +11,11 @@ flask = ">=3.1.0,<4.0.0"
 flasgger = ">=0.9.7.1,<0.10.0.0"
 pymongo = ">=4.11.3,<5.0.0"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.0"
+pytest-mock = "^3.14.0"
+pytest-cov = "^5.0.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
