--- a/etl/pyproject.toml
+++ b/etl/pyproject.toml
@@ -10,6 +10,11 @@ python = ">=3.12"
 pandas = ">=2.2.3,<3.0.0"
 pymongo = ">=4.11.3,<5.0.0"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.0"
+pytest-mock = "^3.14.0"
+pytest-cov = "^5.0.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
